# rustbin

./: .dockerignore  .gitignore  COPYING  Cargo.toml  Dockerfile  LICENSE
src/: errors.rs  highlight.rs  io.rs  main.rs  params.rs
templates/: 404.html  500.html  base.html  highlight.css  index.html  paste.html
