[package]
name = "bin"
version = "2.0.0"
description = "a pastebin/url-shortener/filestore/whatever"
repository = "https://github.com/AvyChanna/bin"
license = "WTFPL OR 0BSD"
authors = ["Jordan Doyle <jordan@doyle.la>", "AvyChanna"]
edition = "2021"

[dependencies]
argh = "0.1"
log = "0.4"
pretty_env_logger = "0.4"
linked-hash-map = "0.5"
once_cell = "1.14"
parking_lot = "0.12"
bytes = { version = "1.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
num_cpus = "1.13"
gpw = "0.1"
actix = "0.13"
actix-web = "4.0"
htmlescape = "0.3"
askama = "0.11"
bat = "0.22"
syntect = "5.0"
tokio = { version = "1.23", features = ["sync"] }
futures = "0.3"

[profile.release]
lto = true
codegen-units = 1
incremental = false
